2008-06-12  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-encodings.h (GMIME_QP_ENCODE_LEN): Add an extra byte
	for \n in the case of quoted_encode_close(). Thanks to Peter
	Bloomfield for discovering this.

2008-06-08  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): added
	constants for MD2, TIGER and HAVAL.

2008-06-08  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.3.3

	* docs/reference/changes-2.4.sgml: Updated.

	* PORTING: Updated.

2008-06-07  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/*.h: Finished documenting all of the structs. Now at 100%
	symbols documented! Woot!

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_sign):
	Use the GMimeCipherHash returned from g_mime_cipher_context_sign()
	to create the micalg parameter value - this way if the requested
	hash was DEFAULT, we set the micalg to the proper value.

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Parse which
	hash algorithm was actually used by gpg.
	(gpg_hash_str): Updated to return strings for the new SHA
	algorithms added this past week.
	(gpg_sign): Return the hash algorithm actually used.

	* gmime/gmime-cipher-context.c (g_mime_cipher_context_sign): This
	method now returns -1 on fail or the GMimeCipherHash on success.

2008-06-07  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parse-utils.c (g_mime_decode_word): No longer
	returns a strdup'd string, this helps increase the performance of
	the address parser and reduces memory fragmentation.

	* gmime/gmime-utils.c (g_mime_references_decode): Updated for
	decode_word() changes.
	(decode_addrspec): Same.

	* gmime/internet-address.c (decode_mailbox): Make sure we don't
	stray beyond the end of the input string. Also updated for changes
	to decode_word() (which now returns a const string rather than a
	strdup'd string).

	* gmime/gmime-header.c (g_mime_header_iter_is_valid): Fixed an FMR